Fix icon vertical alignment in mobile toolbar.

--- a/themes/finna2/less/finna/mobile-toolbar.less
+++ b/themes/finna2/less/finna/mobile-toolbar.less
@@ -141,7 +141,6 @@
     z-index: 60;
     i {
       font-size: 15px;
-      vertical-align: -2px;
     }
     li.sidebar-navigation {
       padding: 11px;
