--- a/themes/finna2/less/finna/mylist.less
+++ b/themes/finna2/less/finna/mylist.less
@@ -502,7 +502,6 @@ span.caret {
     background: @sidebar-background;
     i {
       font-size: 15px;
-      vertical-align: -2px;
     }
     li.sidebar-navigation {
       padding: 11px;
